# yt-python-drops

./: .gitignore  pyproject.toml
vid01_comprehensions/: comprehensions.py  profiling.py
vid02_if_name_main/: principal.py  secundario.py
vid03_generators/: generators.py
vid04_logging_basico/: logging_exemplos.py
vid05_logging_avancado/: funcoes_trigonometricas.py  get_logger.py  logging_exemplos.py
vid06_env_vars/: consome_online_users.py  credenciais_locais.env  env_vars.py
vid07_namedtuple/: tuplas_nomeadas.py
